# private-ml-sdk

./: .gitignore  .gitmodules  Makefile  README.md  build.sh  dev-setup  dist.sh  mkimage.sh  run_td.sh  setup  setup-dev  sync-upstream.sh
.github/workflows/: release.yml
docs/: cvm_dstack_sample.service  how-cvm-boots.md  vllm.md
e2e/: README.md  quote.py  vllm_chat_example.py
guest-image/: .keep
meta-dstack-nvidia/: .gitignore  .gitmodules  build.sh  dev-setup  mkimage.sh
mock/: config.json
repro-build/: .gitignore  Dockerfile.repro  check.sh  repro-build.sh
scripts/: calc_rtmr3.py
setup.d/: nvidia-layer.sh
vllm-proxy/: README.md  TESTING.md  pyproject.toml  requirements.txt
vllm-proxy/docker/: Dockerfile  build.sh  docker-compose.yml  install_patch.sh
vllm-proxy/docs/: signature_verification_example.py
vllm-proxy/redis/: docker-compose.yaml
vllm-proxy/src/app/: main.py
vllm-proxy/src/app/api/helper/: auth.py
vllm-proxy/src/app/api/response/: response.py
vllm-proxy/src/app/api/v1/: openai.py  signature.py
vllm-proxy/src/app/cache/: cache.py  redis.py
vllm-proxy/src/app/quote/: quote.py
vllm-proxy/src/tests/app/quote/: quote_test.py
vllm-proxy/tests/: signature_verification_example.py
vllm-proxy/tests/app/: mock_quote.py  sample_dstack_data.py  test_end_to_end_chain.py  test_helpers.py  test_openai.py
vllm-proxy/tests/app/quote/: test_quote.py
vllm-proxy/verifier/: README.md  attestation_verifier.py  signature_verifier.py
vllm-proxy/verifiers/: README.md  attestation_verifier.py  signature_verifier.py
(+111 files in other folders)
